# django-subscriptions

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  migrate.py  pyproject.toml  runtests.py  setup.cfg
.circleci/: config.yml
src/subscriptions/: admin.py  apps.py  factories.py  fsm_hooks.py  models.py  signals.py  states.py  tasks.py
src/subscriptions/migrations/: 0001_init.py  0002_statetext.py  0003_stateorder.py
tests/: requirements.txt  test_subscriptions.py  test_utils.py
