[tool.isort]
combine_as_imports = true
default_section = "FIRSTPARTY"
line_length = 100
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
not_skip = "__init__.py"
skip = "migrations"
known_third_party = ["django", "django_fsm"]
known_first_party = [
    "subscriptions",
]

[tool.black]
line-length = 120

[tool.poetry]
name = "django-subscriptions"
readme = "README.md"
homepage = "http://github.com/kogan/"
repository = "http://github.com/kogan/django-subscriptions/"
documentation = "http://github.com/kogan/django-subscriptions/"
version = "2.0.0"
description = "A django package for managing subscription states"
license = "BSD-3-Clause"
authors = [
    "Josh Smeaton <josh.smeaton@gmail.com>",
    "Simon Willcock <simon@willcock.com.au>",
    "Alec McGavin <alec@mcgav.in>",
]
packages = [
    { include = "subscriptions", from = "src" },
]
keywords = ["subscriptions", "django"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
]


[tool.poetry.dependencies]
python = ">=3.6"
django-fsm = ">=2.6"
django-fsm-log = ">=1.6"

[tool.poetry.dev-dependencies]
django = ">=2.2"
flake8 = ">=3.7"
flake8-isort = ">=2.7"
flake8-builtins = ">=1.4"
flake8-comprehensions = ">=1.4"
flake8-pep3101 = ">=1.2"
isort = ">=4.3"
black = {version = ">=19.10b0", allow-prereleases = true}
ipdb = ">=0.12.0"
pre-commit = ">=2.1"
celery = ">=4.3"
unittest-xml-reporting = "^2.5"
mypy = ">=0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
